--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
             font-family: Arial, Helvetica, sans-serif;/*definir a fonte do texto*/
             text-align: center;/*centralizar o texto da página*/
             margin: 50px;/*definir uma margem ao redor do conteúdo*/
-            background-color: #f4f4f4; /*definir a cor de fundo padrão*/
+            background-color: #0d6ebd; /*definir a cor de fundo padrão*/
         }
     </style>
 </head>
