--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Simples</title>
     <style>
-        /*defição do estilo da página */
+        /*Definição do estilo da página*/
         body{
-            font-family: Arial, Helvetica, sans-serif;/*definir a fonte do texto*/
-            text-align: center;/*centralizar o texto da página*/
-            margin: 50px;/*definir uma margem ao redor do conteúdo*/
-            background-color: #0d6ebd; /*definir a cor de fundo padrão*/
+            font-family: Arial, Helvetica, sans-serif;/*Definir a fonte do texto*/
+            text-align: center;/*Centralizar o texto na página*/
+            margin:50px; /*Definir uma margem ao redor do conteúdo*/
+            background-color: #f4f4f4; /*Definir a cor de fundo padrão*/
+        }
+       
+        /*Etilizar o botão*/
+        button{
+            padding: 10px 20px;/*Definir o tamanho botão*/
+            font-size: 16px;/*Define o tamanho da fonte do botão*/
+            cursor: pointer; /* Altera o cursor ao passar sobre o botão */
+            background-color: blue; /* Define a cor de fundo do botão */
+           color: white;/*Definir a cor do texto do botão*/
+           border: nome;/*remove a borda do botão*/
+           border-radius: 5px;/*adiciona os cantos arredondados ao botão*/
+
         }
     </style>
+   
 </head>
 <body>
     <!--Título principal da página-->
@@ -20,5 +33,15 @@
 
     <!--Botão que mudará a cor de fundo da nossa página-->
     <button onclick="mudarCor()">Mudar Cor de Fundo</button>
+    <script>
+        // Função JavaScript para mudar a cor de fundo da página
+        function mudarCor() {
+            // Gera uma cor aleatória em formato hexadecimal
+            var corAleatoria = '#' + Math.floor(Math.random()*16777215).toString(16);
+            // Aplica a nova cor ao fundo da página
+            document.body.style.backgroundColor = corAleatoria;
+        }
+    </script>
+
 </body>
 </html>
